--- a/index.html
+++ b/index.html
@@ -84,34 +84,34 @@ function StationSix()
 }
 function StationSeven()
 {
-    var myarray= new Array("You remain in the aquifer.<br>STAY at Station 7 - Aquifer!",
-                           "You remain in the aquifer.<br>STAY  at Station 7 - Aquifer!",
-                           "You remain in the aquifer.<br>STAY  at Station 7 - Aquifer!",
-                           "After a long time you seep into the ocean.<br>Go to Station 6 - Oceans",
-                           "You pop up as an underground spring and supply water to a lake.<br>Go to Station 5 - Lakes & Rivers",
-                           "You pop up as a spring on the earth’s surface and make the ground wet.<br>Go to Station 8 - Ground");
+    var myarray= new Array("Station 7 - Aquifer<br>You remain in the aquifer.<br>STAY at Station 7 - Aquifer!",
+                           "Station 7 - Aquifer<br>You remain in the aquifer.<br>STAY  at Station 7 - Aquifer!",
+                           "Station 7 - Aquifer<br>You remain in the aquifer.<br>STAY  at Station 7 - Aquifer!",
+                           "Station 7 - Aquifer<br>After a long time you seep into the ocean.<br>Go to Station 6 - Oceans",
+                           "Station 7 - Aquifer<br>You pop up as an underground spring and supply water to a lake.<br>Go to Station 5 - Lakes & Rivers",
+                           "Station 7 - Aquifer<br>You pop up as a spring on the earth’s surface and make the ground wet.<br>Go to Station 8 - Ground");
     var random = myarray[Math.floor(Math.random() * myarray.length)];
    document.getElementById("s1").innerHTML=random;
 }
 function StationEight()
 {
-        var myarray= new Array("You change from a liquid (water) to a gas (water vapor). This process is called EVAPORATION.<br>Go to Station 1 - Atmosphere.",
-                           "You change from a liquid (water) to a gas (water vapor). This process is called EVAPORATION.<br>Go to Station 1 - Atmosphere.",
-                           "You change from a liquid (water) to a gas (water vapor). This process is called EVAPORATION.<br>Go to Station 1 - Atmosphere.",
-                           "You are absorbed into the root of a blade of grass.<br>Go to Station 9 - Plants.",
-                           "You are absorbed into the root of a tree.<br>Go to Station 9 - Plants.",
-                           "You PERCOLATE deep into the earth.<br>Go to Station 7 - Aquifers.");
+        var myarray= new Array("Station 8 - Ground<br>You change from a liquid (water) to a gas (water vapor). This process is called EVAPORATION.<br>Go to Station 1 - Atmosphere.",
+                           "Station 8 - Ground<br>You change from a liquid (water) to a gas (water vapor). This process is called EVAPORATION.<br>Go to Station 1 - Atmosphere.",
+                           "Station 8 - Ground<br>You change from a liquid (water) to a gas (water vapor). This process is called EVAPORATION.<br>Go to Station 1 - Atmosphere.",
+                           "Station 8 - Ground<br>You are absorbed into the root of a blade of grass.<br>Go to Station 9 - Plants.",
+                           "Station 8 - Ground<br>You are absorbed into the root of a tree.<br>Go to Station 9 - Plants.",
+                           "Station 8 - Ground<br>You PERCOLATE deep into the earth.<br>Go to Station 7 - Aquifers.");
     var random = myarray[Math.floor(Math.random() * myarray.length)];
    document.getElementById("s1").innerHTML=random;
 }
 function StationNine()
 {
-        var myarray= new Array("",
-                           "",
-                           "",
-                           "",
-                           "",
-                           "");
+        var myarray= new Array("Station 9 - Plants<br>You are used by the plant to move necessary minerals to the parts of the plants that require them and for photosynthesis. You remain in the plant. STAY at Station 9 - Plants!",
+                           "Station 9 - Plants<br>You move as water from the roots to the leaves of the plant then evaporate into the atmosphere. This process is called TRANSPIRATION.<br>Go to Station 1 - Atmosphere",
+                           "Station 9 - Plants<br>You move as water from the roots to the leaves of the plant then evaporate into the atmosphere. This process is called TRANSPIRATION.<br>Go to Station 1 - Atmosphere",
+                           "Station 9 - Plants<br>You move as water from the roots to the leaves of the plant then evaporate into the atmosphere. This process is called TRANSPIRATION.<br>Go to Station 1 - Atmosphere",
+                           "Station 9 - Plants<br>You move as water from the roots to the leaves of the plant then evaporate into the atmosphere. This process is called TRANSPIRATION.<br>Go to Station 1 - Atmosphere",
+                           "Station 9 - Plants<br>You move as water from the roots to the leaves of the plant then evaporate into the atmosphere. This process is called TRANSPIRATION.<br>Go to Station 1 - Atmosphere");
     var random = myarray[Math.floor(Math.random() * myarray.length)];
    document.getElementById("s1").innerHTML=random;
 }
