--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ function StationEight()
 }
 function StationNine()
 {
-    var myarray= new Array("Station 9 - Plants:<br>You are used by the plant to move necessary minerals to the parts of the plants that require them and for photosynthesis. You remain in the plant. STAY at Station 9 - Plants!",
+    var myarray= new Array("Station 9 - Plants:<br>You are used by the plant to move necessary minerals to the parts of the plants that require them and for photosynthesis. You remain in the plant.<br>STAY at Station 9 - Plants!",
                            "Station 9 - Plants:<br>You move as water from the roots to the leaves of the plant then evaporate into the atmosphere. This process is called TRANSPIRATION.<br>Go to Station 1 - Atmosphere",
                            "Station 9 - Plants:<br>You move as water from the roots to the leaves of the plant then evaporate into the atmosphere. This process is called TRANSPIRATION.<br>Go to Station 1 - Atmosphere",
                            "Station 9 - Plants:<br>You move as water from the roots to the leaves of the plant then evaporate into the atmosphere. This process is called TRANSPIRATION.<br>Go to Station 1 - Atmosphere",
